@@ -602,7 +602,7 @@ specified by the user:
 \fIslop\fR is needed for selecting the screen region with mouse
 (\fB\-S\fR option).
 .PP
-\fIFFprobe\fR and \fIbc\fR are needed for video fade effect (\fB\-e\fR option).
+\fIFFprobe\fR is needed for video fade effect (\fB\-e\fR option).
 .PP
 \fIImageMagick\fR is needed for text watermark effect (\fB\-w\fR option). Both
 IM6 and IM7 are supported, but IM7 is preferred.
