@@ -12,6 +12,7 @@ https://github.com/dbermond/screencast/
 - added support for SVT HEVC video encoder
 - added support for SVT VP9 video encoder
 - changed default font for text watermark to DejaVu-Sans
+- remove bc requirement for the fade effect
 - new option: select tickness of the screen region border delimiter
 - new option: select the X server display and screen
 - fix: security issue with temporary directory (https://github.com/dbermond/screencast/issues/3)
